APL-1581_Update_my_transaction Small fix

--- a/src/containers/app/scss/_global.scss
+++ b/src/containers/app/scss/_global.scss
@@ -1958,6 +1958,10 @@ svg {
 	margin: 0;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 .bg-white {
 	background-color: #ffffff;
 }
